# menuu

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  menuu.1
docs/: binds-vim.conf  menuu.1.md  menuu.py
include/: arg.hpp  argv.hpp  draw.hpp  fifo.hpp  history.hpp  img.hpp  macros.hpp  match.hpp  menuu.hpp  mouse.hpp  options.hpp  rtl.hpp  schemes.hpp  sockets.hpp  sort.hpp  stream.hpp
include/config/: config.hpp
include/wl/: init.hpp  shm.hpp  wayland.hpp
include/x11/: client.hpp  clipboard.hpp  event.hpp  focus.hpp  init.hpp  key.hpp  mouse.hpp  x11_libs.hpp  xim.hpp  xrdb.hpp
libmenuu/: README.md  pyproject.toml
libmenuu/libmenuu/: __init__.py  core.py  interfacing.py  settings.py
scripts/: generate_dist.sh  generate_man.sh  generate_wayland_c.sh
src/: arg.cpp  argv.cpp  draw.cpp  fifo.cpp  history.cpp  img.cpp  macros.cpp  match.cpp  menuu.cpp  rtl.cpp  schemes.cpp  sockets.cpp  sort.cpp  stream.cpp
src/config/: .config.cpp.swp  config.cpp
src/regex/: regex.c
src/wl/: init.cpp  shm.cpp  wayland.cpp
src/x11/: client.cpp  clipboard.cpp  event.cpp  focus.cpp  init.cpp  key.cpp  mouse.cpp  xim.cpp  xrdb.cpp
