[project]
name = "libmenuu"
version = "0.1.0"
description = "Python interface for Menuu"
authors = [{name = "Jacob Nilsson", email = "jacob@jacobnilsson.com"}]
license = "MIT"
keywords = ["python", "menuu", "interface"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
